stream fixes
Signed-off-by: cinjaucostin <cinjau.costin@yahoo.com>